--- a/core/welcome-screen/css/welcome.css
+++ b/core/welcome-screen/css/welcome.css
@@ -58,8 +58,10 @@
     width: 100%;
     max-width: 100%;
 }
-
-.about-wrap .affluent-dismiss-required-action {
+.epsilon-recommeded-actions {
+    position: relative;
+}
+.affluent-dismiss-required-action {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -68,6 +70,23 @@
     color: #FFF;
     border-radius: 50%;
     cursor: pointer;
+}
+.epsilon-recommeded-actions .affluent-dismiss-required-action {
+    top: 0;
+    right: 0;
+}
+.epsilon-recommeded-actions #temp_load {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba( 0,0,0,.2 );
+    display: flex;
+    align-items: center;
+}
+.epsilon-recommeded-actions #temp_load img {
+    margin: 0 auto;
 }
 
 .badge-action-count {
