--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description:Affluent is a free corporate WordPress theme perfect for creating pr
 Tags: one-column, two-columns, right-sidebar, full-width-template, sticky-post, theme-options, custom-background, footer-widgets, grid-layout, portfolio, blog, e-commerce, custom-menu, featured-images, threaded-comments, translation-ready, custom-header
 Author:CPOThemes
 Author URI:http://www.cpothemes.com
-Version:1.0.4
+Version:1.0.5
 License:GNU General Public License 2.0
 License URI:license.txt
 Text Domain:affluent
@@ -356,7 +356,9 @@ POSTS & PAGES
 .portfolio-item a:hover { text-decoration:none; }
 .portfolio-item:hover .portfolio-item-overlay { opacity:1; }
 .portfolio-item:hover .portfolio-item-icon { top:50%; opacity:1; text-shadow:0 0 10px #fff; }
-.portfolio-item-image{ color:#fff;position: absolute;bottom: 50%;width: 80%;margin: 0 10%;padding: 0 0 15px;-moz-transition: 0.4s all;-webkit-transition: 0.4s all;transition: 0.4s all;}
+.portfolio-item-image{ position: absolute;width: 100%;margin: 0;padding: 0;-moz-transition: 0.4s all;-webkit-transition: 0.4s all;transition: 0.4s all;top: 0;left: 0;z-index: 99997;height: 100%;}
+.portfolio-item .post-edit-link {z-index: 99998; position: absolute;display: none;top: 5px; left: 50%; transform: translateX(-50%);}
+.portfolio-item:hover .post-edit-link { display: block;  }
 
 
 /* SERVICES */
