--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI:http://www.cpothemes.com/theme/affluent
 Description:Affluent is a free corporate WordPress theme perfect for creating professional looking websites with minimal effort. You can turn Affluent into a portfolio WordPress theme easily thanks to CPO Content Types, as well as adding a homepage slider, featured blocks, or even a testimonial rotator. This free theme also provides complete integration with popular WordPress plugins like WooCommerce, Yoast SEO, WPML, and Contact Form 7.
 Author:CPOThemes
 Author URI:http://www.cpothemes.com
-Version:1.1.3
+Version:1.1.4
 Tested up to: 5.5
 Requires PHP: 5.4.0
 Tags: one-column, two-columns, right-sidebar, full-width-template, sticky-post, theme-options, custom-background, footer-widgets, grid-layout, portfolio, blog, e-commerce, custom-menu, featured-images, threaded-comments, translation-ready, custom-header
@@ -511,4 +511,9 @@ RESPONSIVE STYLES
 	.post .post-byline div:before { right:auto; left:0; }
 	.post .post-byline .comments { display:none; }
 	.post .post-content { padding:0; margin:0 0 15px 0; }
+}
+
+/** Theme Standards */
+#content a, #comments a {
+	text-decoration: underline;
 }
